--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "Curtis Bishop"
 description              : "An exercise in contious learning and improvement."
 url                      : "https://bishopcurtisj.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  :  "/main" # the subpath of your site, e.g. "/blog"
+baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               : "bishopcurtisj/bishopcurtisj.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     :  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
