--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,7 @@ analytics:
 author:
   name             : "Curtis Bishop"
   avatar           : "/assets/images/headshot.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data-Driven Economics and Computer Science Student | Analytical Thinker 
-                      Passionate about Transforming Data into Actionable Insights"
+  bio              : "Analytical Thinker Passionate about Transforming Data into Actionable Insights"
   location         : "Logan, UT"
   email            : "bishopcurtisj@outlook.com"
   links:
@@ -124,8 +123,8 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://www.linkedin.com/in/bishopcurtisj/"
+      icon: "fab fa-fw fa-linkedin-square"
+      url: "https://www.linkedin.com/in/bishopcurtisj/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bishopcurtisj"
