--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/bishopcurtisj/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
